[fix] Model: implement GearUseFeatures and VesselUsefeatures repositories